WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223294
[GPUP] WebGL2RenderingContext::texImage2D() does not work with a video as the image source
https://bugs.webkit.org/show_bug.cgi?id=223294
Summary
[GPUP] WebGL2RenderingContext::texImage2D() does not work with a video as the...
Peng Liu
Reported
2021-03-16 18:25:47 PDT
platform/mac/media/media-source/videoplaybackquality-decompressionsession.html fails because of this issue.
Attachments
Patch
(5.84 KB, patch)
2021-03-17 17:39 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-16 18:29:05 PDT
<
rdar://problem/75505136
>
Kimmo Kinnunen
Comment 2
2021-03-17 07:29:48 PDT
What do you mean? I think we implemented it. So this crashes on normal runs because the media stack does not implement non-gpup webgl. This fails in media+webgl in gpup because "WebGL: INVALID_VALUE: texImage2D: no video". This is possibly because the test tries to get the video before the video is available? You cannot upload the video to the texture before you have loaded the video, played it and observed time update?
Peng Liu
Comment 3
2021-03-17 17:39:05 PDT
Created
attachment 423544
[details]
Patch
EWS
Comment 4
2021-03-17 22:20:24 PDT
Committed
r274614
: <
https://commits.webkit.org/r274614
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423544
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug