[GPUP] WebGL2RenderingContext::texImage2D() does not work with a video as the image source https://bugs.webkit.org/show_bug.cgi?id=223294

Reviewed by Eric Carlson.

Source/WebKit:

No new tests. Fix a test failure.

* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::updateCachedState):
Add a missing piece to implement `MediaPlayerPrivateRemote::videoPlaybackQualityMetrics()`.

LayoutTests:

* platform/mac/TestExpectations:
* platform/mac/media/media-source/videoplaybackquality-decompressionsession-expected.txt:
* platform/mac/media/media-source/videoplaybackquality-decompressionsession.html:


Canonical link: https://commits.webkit.org/235451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274614 268f45cc-cd09-0410-ab3c-d52691b4dbfc